--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
+    "react-modern-drawer": "^1.2.2",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
   },
