--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "next": "14.0.1",
     "react": "^18",
+    "react-awesome-reveal": "^4.2.6",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "react-modern-drawer": "^1.2.2",
